--- a/video.html
+++ b/video.html
@@ -8,50 +8,79 @@
 </head>
 <body>
   <div class="container">
-    <h1>Aptitude Video Tutorials</h1>
-    <div id="video-container" class="video-container">
-        <video id="main-video" width="560" height="315" controls poster="hcf.jpeg" playsinline webkit-playsinline>
-          <source src="Video2.mp4" type="video/mp4">
-          Your browser does not support the video tag.
-        </video>
-      </div>      
+    <h1>Aptitude Video Tutorials</h1>      
     <div class="suggested-videos">
-        <h2>Suggested Videos</h2>
         <ul>
           <li>
             <a href="Video1.mp4" onclick="changeVideo('Video1.mp4', 'hcf1.jpeg', 'Video Title 1')"> <!-- Update these values with appropriate video and thumbnail -->
               <img src="hcf.jpeg" alt="Video Thumbnail 1">
-              Video Title 1
+              HCF&LCM - 1
             </a>
           </li>
           <li>
             <a href="Video2.mp4" onclick="changeVideo('Video2.mp4', 'hcf2.jpeg', 'Video Title 2')"> <!-- Update these values with appropriate video and thumbnail -->
               <img src="hcf.jpeg" alt="Video Thumbnail 2">
-              Video Title 2
+              HCF&LCM - 1
             </a>
           </li>
           <li>
             <a href="Video3.mp4" onclick="changeVideo('Video3.mp4', 'hcf3.jpeg', 'Video Title 3')"> <!-- Update these values with appropriate video and thumbnail -->
-              <img src="hcf.jpeg" alt="Video Thumbnail 3">
-              Video Title 3
+              <img src="avg.jpeg" alt="Video Thumbnail 3">
+              Averages
             </a>
           </li>
           <li>
-            <a href="Video2.mp4" onclick="changeVideo('Video4.mp4', 'hcf4.jpeg', 'Video Title 4')"> <!-- Update these values with appropriate video and thumbnail -->
-              <img src="hcf.jpeg" alt="Video Thumbnail 4">
-              Video Title 4
+            <a href="num1.mp4" onclick="changeVideo('Video4.mp4', 'hcf4.jpeg', 'Video Title 4')"> <!-- Update these values with appropriate video and thumbnail -->
+              <img src="numbers.jpeg" alt="Video Thumbnail 4">
+              Numbers - 1
             </a>
           </li>
           <li>
-            <a href="Video1.mp4" onclick="changeVideo('Video1.mp4', 'hcf1.jpeg', 'Video Title 1')"> <!-- Update these values with appropriate video and thumbnail -->
-              <img src="hcf.jpeg" alt="Video Thumbnail 1">
-              Video Title 1
+            <a href="num2.mp4" onclick="changeVideo('Video1.mp4', 'hcf1.jpeg', 'Video Title 1')"> <!-- Update these values with appropriate video and thumbnail -->
+              <img src="numbers.jpeg" alt="Video Thumbnail 1">
+              Numbers - 2
             </a>
           </li>
           <li>
-            <a href="Video1.mp4" onclick="changeVideo('Video1.mp4', 'hcf1.jpeg', 'Video Title 1')"> <!-- Update these values with appropriate video and thumbnail -->
-              <img src="hcf.jpeg" alt="Video Thumbnail 1">
-              Video Title 1
+            <a href="ages1.mp4" onclick="changeVideo('Video1.mp4', 'hcf1.jpeg', 'Video Title 1')"> <!-- Update these values with appropriate video and thumbnail -->
+              <img src="ages.jpeg" alt="Video Thumbnail 1">
+              Ages - 1
+            </a>
+          </li>
+          <li>
+            <a href="ages2.mp4" onclick="changeVideo('Video1.mp4', 'hcf1.jpeg', 'Video Title 1')"> <!-- Update these values with appropriate video and thumbnail -->
+              <img src="ages.jpeg" alt="Video Thumbnail 1">
+              Ages - 2
+            </a>
+          </li>
+          <li>
+            <a href="prob1.mp4" onclick="changeVideo('Video1.mp4', 'hcf1.jpeg', 'Video Title 1')"> <!-- Update these values with appropriate video and thumbnail -->
+              <img src="probability.jpeg" alt="Video Thumbnail 1">
+              Probability - 1
+            </a>
+          </li>
+          <li>
+            <a href="prob2.mp4" onclick="changeVideo('Video1.mp4', 'hcf1.jpeg', 'Video Title 1')"> <!-- Update these values with appropriate video and thumbnail -->
+              <img src="probability.jpeg" alt="Video Thumbnail 1">
+              Probability - 2
+            </a>
+          </li>
+          <li>
+            <a href="bs1.mp4" onclick="changeVideo('Video1.mp4', 'hcf1.jpeg', 'Video Title 1')"> <!-- Update these values with appropriate video and thumbnail -->
+              <img src="bs1.png" alt="Video Thumbnail 1">
+              Boats&Streams - 1
+            </a>
+          </li>
+          <li>
+            <a href="bs2.mp4" onclick="changeVideo('Video1.mp4', 'hcf1.jpeg', 'Video Title 1')"> <!-- Update these values with appropriate video and thumbnail -->
+              <img src="bs1.png" alt="Video Thumbnail 1">
+              Boats&Streams - 2
+            </a>
+          </li>
+          <li>
+            <a href="bs3.mp4" onclick="changeVideo('Video1.mp4', 'hcf1.jpeg', 'Video Title 1')"> <!-- Update these values with appropriate video and thumbnail -->
+              <img src="bs1.png" alt="Video Thumbnail 1">
+              Boats&Streams - 3
             </a>
           </li>
           <!-- Add more suggested videos as needed -->
@@ -59,6 +88,6 @@
       </div>
       
   </div>
-  <script src="script.js"></script>
+  <script src="scripts.js"></script>
 </body>
 </html>
