--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <ul>
       <li><a href="#" class="active">Home</a></li>
       <li><a href="topics1.html">Prepare</a></li>
-      <li><a href="video-folder/video.html">Videos</a></li>
+      <li><a href="video.html">Videos</a></li>
       <li><a href="topics.html">Test</a></li>
       <li><a href="login.html">Login</a></li>
     </ul>
